# ugd

./: README.md  flake.nix  pyproject.toml  treefmt.toml
ugd/: __main__.py  ug.py
