[tool.poetry]
name = "ugd"
version = "0.1.0"
description = ""
authors = ["Tarneo <tarneo@tarneo.fr>"]
readme = "README.md"
license = "GPLv3"
packages = [
  { include = "ugd" }
]

[tool.poetry.dependencies]
python = "^3.10"
# beautifulsoup4 = "^4.13"
# requests = "^2.32"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.4"

[tool.poetry.scripts]
ugd = 'ugd.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
